# RepoGuard

./: .gitignore  CONTRIBUTING.MD  README.MD  pyproject.toml  requirements.txt
app/: db.py  main.py  prompt_builder.py
app/prompts/: validator.txt
app/services/: chunking.py  embedding.py
app/utils/: search.py  store.py
repoguard/: cli.py  gitdiff.py  run.py
repoguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
repoguard_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
