[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "repoguard-cli"
version = "1.0.3"
description = "Repo-aware PR guideline validator"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2",
  "fastapi==0.128.0",
  "psycopg2-binary",
  # gemini sdk etc
]

[project.scripts]
repoguard-cli = "repoguard.cli:main"

[tool.setuptools.packages.find]
include = ["repoguard*", "app*"]
